sample/msvc/error/c2208.cpp
// C2208.cpp
class C {
   C;   // C2208
   C(){}   // OK
};
